# Physics-Engine

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  Sample - Collisions.blend
blender/: __init__.py  blender_manifest.toml  operators.py  panels.py  preferences.py  properties.py
data/: example.phys  test.phys
interface/: nbody.py
scripts/: package_blender.py
src/: CMakeLists.txt  constants.h  main.cpp
src/array/: CMakeLists.txt  array.f90  array.h
src/fortran/: CMakeLists.txt  dummy.f90  dummy.h
src/io/: CMakeLists.txt  parser.cpp  parser.h
src/logic/: CMakeLists.txt  gravity.c  gravity.h  sim.c  sim.h
src/logic/collision/: CMakeLists.txt  aabb.c  aabb.h  collision.c  collision.h  octree.c  octree.h  sat.c  sat.h
src/logic/forces/: CMakeLists.txt  collision.c  collision.h  gravity.c  gravity.h
src/math/: CMakeLists.txt  matrix.c  matrix.h  vec3.c  vec3.h
src/math/cuda/: CMakeLists.txt  cuda_matrix.h  matrix.cu  matrix_add.cu  matrix_core.h  matrix_div.cu  matrix_hadamard.cu  matrix_mul.cu  matrix_power.cu  matrix_scalar.cu  matrix_sub.cu  matrix_sum.cu
src/math/fortran/: CMakeLists.txt  fortran_matrix.h  matrix_add.f90  matrix_div.f90  matrix_hadamard.f90  matrix_mul.f90  matrix_power.f90  matrix_scalar.f90  matrix_sub.f90  matrix_sum.f90
src/matrix/: CMakeLists.txt  matrix.cu  matrix.h
src/models/: CMakeLists.txt  object.c  object.h
src/state/: CMakeLists.txt  constructs.hpp  object.h
test/: CMakeLists.txt  minunit.h  test_matrix_add.c  test_matrix_mul.c  test_matrix_scalar_add.c  test_matrix_scalar_div.c  test_matrix_scalar_mul.c  test_matrix_scalar_sub.c  test_matrix_sub.c
test/framework/: minunit.h  test_runner.h
test/logic/: test_aabb.c  test_collision.c  test_inelastic_collision.c  test_newtonian_gravity.c
test/math/: test_matrix_add.c  test_matrix_mul.c  test_matrix_power.c  test_matrix_scalar.c  test_matrix_sub.c
test/models/: test_object_step.c
